Fix: Batched columns taking too much space

--- a/www/comps/valueRich.css
+++ b/www/comps/valueRich.css
@@ -1,5 +1,4 @@
 .value-rich{
-	flex:1 1 auto;
 	display:flex;
 	flex-flow:row nowrap;
 	align-items:center;
@@ -8,9 +7,11 @@
 	overflow:hidden;
 }
 .value-rich.alignEnd{
+	flex:1 1 auto;
 	justify-content:flex-end;
 }
 .value-rich.alignMid{
+	flex:1 1 auto;
 	justify-content:center;
 }
 .value-rich.bold{
